# slog

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  README.md
cmake/: ClangTools.cmake
example/: CMakeLists.txt  main.c
include/: slog.h
src/: slog.c
test/: CMakeLists.txt  test_slog.c
